# master-programming-task

lab1/: CMakeLists.txt
lab1/include/: introduction.hpp
lab1/tests/: introduction.cpp
lab2/: CMakeLists.txt
lab2/include/: iomanip.hpp
lab3/: CMakeLists.txt
lab3/include/: proxy.hpp
lab4/: CMakeLists.txt
lab4/include/: iterator.hpp
